# mdatron

./: .gitignore  BOOTSTRAP-MITIGATION.md  BOUNDARY-PREAMBLE.md  CHANGELOG.md  Cargo.toml  DESIGN-MDATRON.md  DESIGN.md  README.md  STEP-2-SCOPE.md  V1-SHIP-CRITERIA.md  allowed_signers  dsl-falsifiability-report.md  heartbeat.json  hub.json  state.json
.claude/commands/: vsdd-domain-accessibility.md  vsdd-domain-ai-engineer.md  vsdd-domain-documentation-reviewer.md  vsdd-domain-platform-engineer.md  vsdd-domain-sanity-check.md  vsdd-domain-security.md  vsdd-domain-software-engineer.md  vsdd-domain-solution-architect.md  vsdd-domain-solution-owner.md  vsdd-domain-technical-writer.md  vsdd-domain-vsdd-methodology.md  vsdd-phase-1a.md  vsdd-phase-1b.md  vsdd-phase-1c.md  vsdd-phase-2a.md  vsdd-phase-2b.md  vsdd-phase-2c.md  vsdd-phase-3.md  vsdd-phase-4.md  vsdd-phase-5.md  vsdd-phase-6.md
.crosslink/: .last-hydrated-ref  hook-config.json
.github/workflows/: ci.yml
.mdatron/: config.yaml  manifest.yaml
.mdatron/schemas/: review-entry.json
.vsdd/events/: 2026-06-01-phase-2a-composition.yaml  2026-06-01-phase-2b-composition.yaml
audit-trail/: 2026-06-01-phase-2a-step-3-composition.md
bootstrap-tooling/: bootstrap-validator.py  canonical-counts.yaml  live-entities.yaml
docs/dependencies/: clap.md  glob.md  jsonschema.md  serde.md  serde_json.md  serde_yaml.md  sha2.md  thiserror.md
mdatron-cli/: Cargo.toml
mdatron-cli/src/: main.rs
mdatron-cli/src/explain/: MDATRON-E0001.md  MDATRON-E0002.md  MDATRON-E0010.md  MDATRON-E0011.md  MDATRON-E0012.md  MDATRON-E0050.md  MDATRON-E0060.md  MDATRON-E0070.md  MDATRON-E0080.md  mod.rs
mdatron-cli/tests/: cli_integration.rs  output_format.rs  wire_format.rs
mdatron-core/: Cargo.toml
mdatron-core/src/: codes.rs  confine.rs  diagnostic.rs  error.rs  frontmatter.rs  init.rs  lib.rs  output.rs  schema.rs  verify.rs  wire.rs
mdatron-core/src/dsl/: expr.rs  expr_parser.rs  index.rs  mod.rs  parser.rs  types.rs
mdatron-core/tests/: phase_1_contracts.rs  red_gate_retrofit.rs
review-log/: 2026-06-01-ai-engineer.md  2026-06-01-solution-architect.md  2026-06-02-accessibility-phase-1-bundle.md  2026-06-02-ai-engineer-phase-1-bundle.md  2026-06-02-data-engineer-phase-1-bundle.md  2026-06-02-documentation-reviewer-phase-1-bundle.md  2026-06-02-localization-phase-1-bundle.md  2026-06-02-performance-engineer-phase-1-bundle.md  2026-06-02-platform-engineer-phase-1-bundle.md  2026-06-02-privacy-phase-1-bundle.md  2026-06-02-quality-engineer-phase-1-bundle.md  2026-06-02-red-team-phase-1-bundle.md  2026-06-02-sanity-check-phase-1-bundle.md  2026-06-02-security-phase-1-bundle.md  2026-06-02-software-engineer-phase-1-bundle.md  2026-06-02-solution-architect-phase-1-bundle.md  2026-06-02-solution-owner-phase-1-bundle.md  2026-06-02-technical-writer-phase-1-bundle.md  2026-06-02-ux-phase-1-bundle.md  2026-06-02-vsdd-methodology-phase-1-bundle.md  2026-06-07-accessibility-phase-2-bundle.md  2026-06-07-ai-engineer-phase-2-bundle.md  2026-06-07-data-engineer-phase-2-bundle.md  2026-06-07-documentation-reviewer-phase-2-bundle.md  2026-06-07-localization-phase-2-bundle.md  2026-06-07-performance-engineer-phase-2-bundle.md  2026-06-07-platform-engineer-phase-2-bundle.md  2026-06-07-privacy-phase-2-bundle.md  2026-06-07-quality-engineer-phase-2-bundle.md  2026-06-07-red-team-phase-2-bundle.md  2026-06-07-sanity-check-phase-2-bundle.md  2026-06-07-security-phase-2-bundle.md  2026-06-07-software-engineer-phase-2-bundle.md  2026-06-07-solution-architect-phase-2-bundle.md  2026-06-07-solution-owner-phase-2-bundle.md  2026-06-07-technical-writer-phase-2-bundle.md  2026-06-07-ux-phase-2-bundle.md  2026-06-07-vsdd-methodology-phase-2-bundle.md  2026-07-19-red-gate-retrofit-52.md  2026-07-19-security-52-retroactive.md  (+1 more)
src/: codes.rs  config.rs  confine.rs  diagnostic.rs  error.rs  frontmatter.rs  init.rs  lib.rs  main.rs  output.rs  schema.rs  verify.rs
src/dsl/: expr.rs  index.rs  mod.rs
src/explain/: MDATRON-E0001.md  MDATRON-E0012.md  MDATRON-E0050.md  MDATRON-E0060.md  MDATRON-E0070.md  MDATRON-E0080.md  mod.rs
tests/: cli_integration.rs  output_format.rs  phase_1_contracts.rs  red_gate_retrofit.rs
