[workspace]
members = ["mdatron-core", "mdatron-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["magnificentlycursed"]
repository = "https://github.com/magnificentlycursed/mdatron-cli"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
clap = { version = "4.5", features = ["derive"] }
jsonschema = { version = "0.18", default-features = false, features = ["draft202012"] }
glob = "0.3"
# std exposes no openat surface; needed for the per-component no-follow open
# in mdatron-core::confine (DESIGN.md § Verification is fast where it is invoked).
libc = "0.2"
