[package]
name = "mdatron"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["magnificentlycursed"]
repository = "https://github.com/magnificentlycursed/mdatron"
description = "Typed-markdown validator with rustc-shaped diagnostics (descended from Schematron, not related to the TRON blockchain)"
keywords = ["markdown", "schema", "validation", "schematron", "linter"]
categories = ["command-line-utilities", "development-tools"]

# Single-crate, binary-first (#81, operator ruling 2026-07-22 executing the
# 2026-06-02 binary-first directive): mdatron is consumed AS A BINARY. The lib
# target (src/lib.rs) is an implementation detail — it exists for unit tests,
# integration tests, and doctests, and carries NO API-stability promise.

[[bin]]
name = "mdatron"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
# serde_yaml_ng: maintained fork of the archived serde_yaml (0.9.34+deprecated),
# API-compatible. See tracker #69 for the dependency investigation.
serde_yaml_ng = "0.10"
# saphyr: position-tracking YAML parse, used only on the schema-violation error
# path to resolve a JSON pointer to a source line (#65). Happy path is serde_yaml_ng.
saphyr = "0.0.11"
# sha256 content hashes for the init managed-partition manifest (#74). DESIGN.md
# ratifies sha256 for pins; see the dependency investigation on #74.
sha2 = "0.10"
serde_json = "1"
thiserror = "1"
clap = { version = "4.5", features = ["derive"] }
jsonschema = { version = "0.18", default-features = false, features = ["draft202012"] }
glob = "0.3"

[target.'cfg(unix)'.dependencies]
# std exposes no openat surface; needed for the per-component no-follow open
# in confine (DESIGN.md § Verification is fast where it is invoked).
libc = "0.2"
