[package]
name = "mdatron"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Typed-markdown validator with rustc-shaped diagnostics (descended from Schematron, not related to the TRON blockchain)"
keywords = ["markdown", "schema", "validation", "schematron", "linter"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mdatron"
path = "src/main.rs"

[dependencies]
mdatron-core = { path = "../mdatron-core" }
clap = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
